--- a/app/src/static/css/styles.css
+++ b/app/src/static/css/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #f4f4f4;
+    background-color: blue;
     margin-top: 50px;
     font-family: 'Lato';
 }
 
 .item {
-    background-color: blue;
+    background-color: white;
     padding: 15px;
     margin-bottom: 15px;
     border: transparent;
